1999-12-08  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/getrlimit.c: Remove K&R compatibility.

	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_TRUNCATE64_SYSCALL and __ASSUME_MMAP2_SYSCALL for 2.3.31
	on x86.
	* sysdeps/unix/sysv/linux/ftruncate64.c: New file.
	* sysdeps/unix/sysv/linux/truncate64.c: New file.
	* sysdeps/unix/sysv/linux/i386/mmap.S: Allow using mmap2.
	* sysdeps/unix/sysv/linux/i386/mmap64.S: New file.

	* ctype/Versions: Add __ctype32_tolower and __ctype32_toupper.
	* ctype/ctype-info.c: Define __ctype32_tolower and __ctype32_toupper.
	* locale/C-ctype.c: Add _nl_C_LC_CTYPE_toupper32 and
	_nl_C_LC_CTYPE_tolower32 tables.
	Don't compile it names of 14652 classes and maps.
	* locale/langinfo.h: Define _NL_CTYPE_TOUPPER32 and
	_NL_CTYPE_TOLOWER32.
	* locale/lc-ctype.c (_nl_postload_ctype): Initialize __ctype32_toupper
	and __ctype32_tolower.
	* locale/programs/ld-ctype.c (struct locale_ctype_t): Add map32.
	(ctype_output): Write out map32 values.
	(allocate_arrays): Compute mapping tables correctly.
	* wctype/wcfuncs.c (towlower): Use __ctype32_tolower.
	(towupper): Use __ctype32_toupper.
	* wctype/wctype.h: Optimize towupper and towlower for values < 256.

	* locale/programs/ld-ctype.c (set_class_defaults): Correctly
	determine tolower mapping for 8bit table if the tolower keyword is
	not given.

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Don't fail if host has
	only IPv6 address.  Reported by Artur Frysiak <wiget@pld.org.pl>.

1999-12-07  Jakub Jelinek  <jakub@redhat.com>

	* string/bits/string2.h (__memset_gc, __mempcpy_small, __strcpy_small,
	__stpcpy_small): Cast switch expressions to int to shut up compiler
	warnings.

1999-12-07  Scott Bambrough <scottb@netwinder.org>

	* sysdeps/arm/dl-machine.h (elf_machine_rel): Fixup R_ARM_PC24
	relocs if possible.

1999-12-06  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/setrlimit.c: First find out wether the
	ugetrlimit syscall exists.
