@@ -41,8 +41,9 @@ ftruncate64 (fd, length)
   if (! have_no_ftruncate64)
 #endif
     {
-      int result = INLINE_SYSCALL (ftruncate64, 3, fd, length >> 32,
-				   length & 0xffffffff);
+      unsigned int low = length & 0xffffffff;
+      unsigned int high = length >> 32;
+      int result = INLINE_SYSCALL (ftruncate64, 3, fd, low, high);
 
 #ifndef __ASSUME_TRUNCATE64_SYSCALL
       if (result != -1 || errno != ENOSYS)
