@@ -41,8 +41,9 @@ truncate64 (path, length)
   if (! have_no_truncate64)
 #endif
     {
-      int result = INLINE_SYSCALL (truncate64, 3, path, length >> 32,
-				   length & 0xffffffff);
+      unsigned int low = length & 0xffffffff;
+      unsigned int high = length >> 32;
+      int result = INLINE_SYSCALL (truncate64, 3, path, low, high);
 
 #ifndef __ASSUME_TRUNCATE64_SYSCALL
       if (result != -1 || errno != ENOSYS)
